--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap");
 
 * {
   margin: 0;
@@ -7,12 +8,13 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: small;
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Press Start 2P", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
+  /* font-family: "Press Start 2P", sans-serif; */
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
@@ -34,20 +36,20 @@ main {
 }
 
 .left {
-  width: 52rem;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .right {
-  width: 52rem;
-  font-size: 2rem;
+  width: 50%;
+  font-size: 1.5rem;
 }
 
 /* ELEMENTS STYLE */
 h1 {
-  font-size: 4rem;
+  font-size: 2rem;
   text-align: center;
   position: absolute;
   width: 100%;
@@ -59,9 +61,9 @@ h1 {
 .number {
   background: #eee;
   color: #333;
-  font-size: 6rem;
-  width: 15rem;
-  padding: 3rem 0rem;
+  font-size: 3rem;
+  width: 10rem;
+  padding: 1rem 0rem;
   text-align: center;
   position: absolute;
   bottom: 0;
@@ -70,29 +72,29 @@ h1 {
 }
 
 .between {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   position: absolute;
-  top: 2rem;
-  right: 2rem;
+  top: 1rem;
+  right: 1rem;
 }
 
 .again {
   position: absolute;
-  top: 2rem;
-  left: 2rem;
+  top: 1rem;
+  left: 1rem;
 }
 
 .guess {
   background: none;
-  border: 4px solid #eee;
+  border: 2px solid #eee;
   font-family: inherit;
   color: inherit;
-  font-size: 5rem;
-  padding: 2.5rem;
-  width: 25rem;
+  font-size: 4rem;
+  padding: 1rem;
+  width: 10rem;
   text-align: center;
   display: block;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .btn {
@@ -101,7 +103,7 @@ h1 {
   color: #222;
   font-size: 2rem;
   font-family: inherit;
-  padding: 2rem 3rem;
+  padding: 1rem;
   cursor: pointer;
 }
 
@@ -110,7 +112,7 @@ h1 {
 }
 
 .message {
-  margin-bottom: 8rem;
+  margin-bottom: 2rem;
   height: 3rem;
 }
 
