--- a/style.css
+++ b/style.css
@@ -23,12 +23,12 @@ body {
 /* LAYOUT */
 header {
   position: relative;
-  height: 35vh;
-  border-bottom: 7px solid #eee;
+  height: 25vh;
+  border-bottom: 3px solid #eee;
 }
 
 main {
-  height: 65vh;
+  height: 40vh;
   color: #eee;
   display: flex;
   align-items: center;
@@ -53,7 +53,7 @@ h1 {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 52%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -62,8 +62,8 @@ h1 {
   background: #eee;
   color: #333;
   font-size: 3rem;
-  width: 10rem;
-  padding: 1rem 0rem;
+  width: 40vw;
+  padding: 1rem;
   text-align: center;
   position: absolute;
   bottom: 0;
@@ -89,15 +89,16 @@ h1 {
   border: 2px solid #eee;
   font-family: inherit;
   color: inherit;
-  font-size: 4rem;
+  font-size: 3rem;
   padding: 1rem;
-  width: 10rem;
+  width: 35vw;
   text-align: center;
   display: block;
-  margin-bottom: 2rem;
+  margin: 1rem 0;
 }
 
 .btn {
+  width: 35vw;
   border: none;
   background-color: #eee;
   color: #222;
@@ -112,7 +113,7 @@ h1 {
 }
 
 .message {
-  margin-bottom: 2rem;
+  margin: 1rem 0;
   height: 3rem;
 }
 
