--- a/style.css
+++ b/style.css
@@ -17,18 +17,43 @@ body {
   /* font-family: "Press Start 2P", sans-serif; */
   color: #eee;
   background-color: #222;
+  max-width: 768px;
+  margin: auto;
   /* background-color: #60b347; */
 }
 
 /* LAYOUT */
 header {
-  position: relative;
-  height: 25vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  height: 30vh;
   border-bottom: 3px solid #eee;
 }
 
+.between {
+  width: 70%;
+  font-size: 1.5rem;
+  text-align: right;
+}
+h1 {
+  display: block;
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+}
+.number {
+  background: #eee;
+  color: #333;
+  font-size: 3rem;
+  width: 30vw;
+  padding: 1rem;
+  text-align: center;
+}
+
 main {
-  height: 40vh;
+  height: 30vh;
   color: #eee;
   display: flex;
   align-items: center;
@@ -45,61 +70,28 @@ main {
 .right {
   width: 50%;
   font-size: 1.5rem;
-}
-
-/* ELEMENTS STYLE */
-h1 {
-  font-size: 2rem;
   text-align: center;
-  position: absolute;
-  width: 100%;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.number {
-  background: #eee;
-  color: #333;
-  font-size: 3rem;
-  width: 40vw;
-  padding: 1rem;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 50%);
-}
-
-.between {
-  font-size: 1.5rem;
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-}
-
-.again {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
 }
 
 .guess {
   background: none;
   border: 2px solid #eee;
+  border-radius: 5px;
   font-family: inherit;
   color: inherit;
   font-size: 3rem;
   padding: 1rem;
-  width: 35vw;
+  width: 70%;
   text-align: center;
   display: block;
   margin: 1rem 0;
 }
 
 .btn {
-  width: 35vw;
+  width: 70%;
+  height: 60px;
   border: none;
+  border-radius: 5px;
   background-color: #eee;
   color: #222;
   font-size: 2rem;
